--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <div class="c c1"></div>
       <div class="c c2"></div>
     </div>
-    <p>hihi</p>
-  </bodty>
+   
+  </body>
 </html>
   
   
